[project]
name = "just"
version = "0.1.1"
description = "for learning Poetry"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = "3.12"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
flask = "^3.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
